fixed button alignment

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ body{
     }
     .content-block .buttons{
         display: flex;
-        margin-left: 9rem;
+        margin-left: 8rem;
         margin-bottom: 3rem;
 
     }
